# fastapi_studies

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
project/: Dockerfile  pyproject.toml
project/app/: config.py  db.py  main.py
project/app/api/: ping.py
project/tests/: conftest.py
