[tool.poetry]
name = "FastAPI Studies App"
version = "0.1.0"
description = "A study of fastAPI framework"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GNU General Public License v3 or lather  (GPLv3+)"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.13.4"
fastapi = "^0.65.1"
asyncpg = "^0.22.0"
tortoise-orm = "^0.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.25.1"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
